--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -23,8 +23,11 @@ body {
   font-family: "Montserrat", sans-serif !important;
   font-size: 62.5% !important;
   width: 100%;
-  height: 100%;
+  height: auto;
   color: var(--bg-color-primary) !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 ::selection {
@@ -47,6 +50,28 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background: var(--color-details-black);
+}
+
+@media (max-width: 700px) {
+  .column {
+    .divOla {
+      width: 50rem;
+      height: 20rem;
+
+      & img {
+        width: 15rem;
+        object-fit: contain;
+      }
+      & .ola {
+        & h3 {
+          font-size: 4rem;
+        }
+        & p {
+          font-size: 1.6rem;
+        }
+      }
+    }
+  }
 }
 
 .navbarOut {
@@ -117,11 +142,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  margin-bottom: 6rem;
   & .suasConsultas {
-    position: relative;
-    right: -10rem;
     width: 60rem;
-    top: 7rem;
     height: 30rem;
     & .selectCoSo {
       display: flex;
@@ -291,9 +314,7 @@ body {
     border-radius: 1rem;
     padding: 1rem;
     box-shadow: 14px 14px 0 0 var(--bg-color-primary);
-    position: relative;
-    top: 5rem;
-    right: -1rem;
+
     & h2 {
       font-size: 4.3rem;
       font-weight: 800;
@@ -418,10 +439,15 @@ body {
   }
 }
 .home {
+  margin-bottom: 5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 11rem 8rem;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  margin: 12rem;
+  row-gap: 5rem;
   & .hero {
     display: flex;
     align-items: center;
@@ -492,16 +518,11 @@ body {
   width: 60rem;
   height: 20rem;
   box-shadow: 14px 14px 0px 0px var(--bg-color-primary);
-  position: relative;
-  left: 10rem;
-  top: 5rem;
+  margin-bottom: 3rem;
 
   & img {
     width: 20rem;
     object-fit: contain;
-    position: absolute;
-    right: 2rem;
-    top: -2rem;
   }
   & .ola {
     & h3 {
@@ -522,20 +543,19 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 28px 70px;
   position: fixed;
-  left: 57%;
-  top: 35px;
+  top: 0rem;
+  left: 21rem;
   transform: translate(-50%, 0%);
   color: var(--bg-color-primary) !important;
-  z-index: 1000;
-  max-width: 100dvw !important;
-  width: 100%;
+  z-index: 9999;
   & .logoHeader {
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 1rem;
+    margin-left: 5rem;
+    margin-top: 2rem;
     & svg {
       width: 5rem;
       height: 5rem;
@@ -546,6 +566,7 @@ header {
     }
   }
 }
+
 .divNav {
   & nav {
     display: flex;
@@ -557,7 +578,6 @@ header {
     color: var(--bg-color-primary) !important;
     fill: var(--bg-color-primary) !important;
     position: fixed;
-    top: 0;
     width: 100%;
     border-radius: 1.5rem;
     padding: 2rem;
@@ -565,19 +585,18 @@ header {
     box-shadow: 8px 8px 0 0 var(--bg-color-primary);
     align-items: center;
     justify-content: space-between;
-    flex-direction: column;
     column-gap: 6rem;
     background-color: var(--color-details-black);
     color: var(--bg-color-primary) !important;
     fill: var(--bg-color-primary) !important;
-    position: absolute;
-    top: 4.5rem;
-    left: 4.5rem;
-    width: 9rem;
-    height: 64rem;
+    position: fixed;
+    bottom: 2rem;
+    width: 89dvw;
+    height: 7rem;
     border-radius: 1.5rem;
     padding: 2rem;
     border: 2px solid var(--bg-color-primary);
+    transform: translateX(-50%);
     box-shadow: 8px 8px 0 0 var(--bg-color-primary);
     & .logo {
       & svg {
@@ -589,8 +608,8 @@ header {
     & ul {
       display: flex;
       list-style: none;
-      row-gap: 3rem;
-      flex-direction: column;
+      column-gap: 2rem;
+      align-items: center;
       & li {
         font-size: 17px;
         font-weight: 500;
@@ -626,6 +645,25 @@ header {
         & i {
           font-size: 3.5rem;
         }
+      }
+    }
+  }
+}
+@media (max-width: 1000px) {
+  .divNav {
+    & nav {
+      position: fixed;
+      bottom: 4rem !important;
+      width: 89dvw;
+      transform: translateX(-50%);
+      height: 9rem;
+      left: 50%;
+      flex-direction: row;
+
+      & ul {
+        flex-direction: row;
+        align-items: center;
+        column-gap: 1rem;
       }
     }
   }
@@ -713,8 +751,6 @@ main {
   border: 1px solid #fff;
   padding: 1rem;
   border-radius: 1rem;
-  position: relative;
-  bottom: -2rem;
   & h2 {
     font-size: 2.3rem;
     font-weight: 500;
@@ -783,9 +819,6 @@ main {
 }
 
 .divColumn2 {
-  position: fixed;
-  top: 13.3rem;
-  right: 12rem;
   .motivoIcon {
     position: relative;
     cursor: pointer;
@@ -795,10 +828,6 @@ main {
     justify-content: center;
   }
   & .suasConsultas {
-    position: relative;
-    right: -10rem;
-    width: 60rem;
-    top: 6rem;
     & .selectCoSo {
       display: flex;
       align-items: center;
@@ -987,10 +1016,8 @@ main {
     opacity: 1;
   }
   & .suasConsultas {
-    position: relative;
-    right: 2rem;
-    width: 60rem;
-    top: 0rem;
+    width: 100%;
+
     & .selectCoSo {
       display: flex;
       align-items: center;
@@ -1083,7 +1110,7 @@ main {
       }
     }
   }
-  .divSolicitacao {131072
+  .divSolicitacao {
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -1146,11 +1173,8 @@ main {
   }
 }
 .divColumn {
-  position: relative;
-  left: 10rem;
-  bottom: -3rem;
   display: flex;
-  row-gap: 2rem;
+  row-gap: 4rem;
   flex-direction: column;
   & #promote-form {
     display: flex;
@@ -1159,7 +1183,7 @@ main {
     box-shadow: 14px 14px 0 0 #fff;
     padding: 1rem;
     border-radius: 1rem;
-    width: 50rem;
+    width: 66rem;
     & h2 {
       font-size: 2.3rem;
       font-weight: 500;
